available jobs fix
