# docs/swagger.json
@@ -1110,13 +1110,9 @@
                         "in": "query"
                     },
                     {
-                        "enum": [
-                            "Small",
-                            "Medium",
-                            "Large"
-                        ],
                         "type": "string",
-                        "description": "Truck size filter",
+                        "example": "\"Small Large\"",
+                        "description": "Truck size filter (space-separated for multiple)",
                         "name": "truck_size",
                         "in": "query"
                     },
@@ -2170,8 +2166,7 @@
                     "200": {
                         "description": "Job details",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/models.Job"
                         }
                     },
                     "400": {
